--- a/AsincronismoDragonBall/Presentation/HeroList/HeroListView.xib
+++ b/AsincronismoDragonBall/Presentation/HeroList/HeroListView.xib
@@ -37,6 +37,9 @@
                     </constraints>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" image="power" catalog="system"/>
+                    <connections>
+                        <action selector="logoutButtonTapped:" destination="-1" eventType="touchUpInside" id="ZEQ-Xv-eEJ"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
